Fix Web Chat import

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     -->
 
     <!-- <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script> -->
-    <script src="/packages/bundle/dist/webchat.js"></script>
+    <script src="/webchat.js"></script>
     <style>
       html,
       body {
