--- a/index.html
+++ b/index.html
@@ -10,38 +10,63 @@
     <script src="https://unpkg.com/react-redux@7.1.0/dist/react-redux.min.js"></script>
     <script src="https://unpkg.com/glamor@2.20.40/umd/index.js"></script>
 
-    <!--
-      This CDN points to the latest official release of Web Chat. If you need to test against Web Chat's latest bits, please refer to pointing to Web Chat's MyGet feed:
-      https://github.com/microsoft/BotFramework-WebChat#how-to-test-with-web-chats-latest-bits
-    -->
-
-    <!-- <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script> -->
+    <!-- This webchat.js file is built from Web Chat's 'latest' bits as of 10/16/2019-->
     <script src="/webchat.js"></script>
     <style>
       html,
       body {
         height: 100%;
+        font-family: sans-serif;
       }
       body {
         margin: 0;
       }
+      .header {
+        height: 15%;
+      }
 
+      .block {
+        padding: 10px; 
+        text-align: center;
+      }
+      .warning {
+        background-color: #FEEFB3; 
+        color: #9F6000; 
+        margin: auto; 
+        padding: 20px;
+        text-align: center;
+        width: 600px; 
+
+      }
+      textarea {
+        min-width: 375px;
+      }
       #webchat {
-        height: 100%;
+        height: 85%;
         width: 100%;
       }
     </style>
   </head>
   <body>
+    <div class="header">
+      <div class="warning">
+        <strong>WARNING: </strong>
+        This sample dangerously sets HTML and is not recommended.
+      </div>
+      <div class="block">
+        Copy the below text into the send box to initiate the sample.
+      </div>
+      <div class="block">
+        <textarea>
+echo <table><tbody><tr><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td><td><nobr>ABCDEFGHIJKLMNOPQRSTUVWXYZ</nobr></td></tr></tbody></table>
+            </textarea>
+          </div>
+      </div>
+    </div>
     <div id="webchat" role="main"></div>
     <script type="text/babel">
       (async function() {
         "use strict";
-
-        // In this demo, we are using Direct Line token from MockBot.
-        // Your client code must provide either a secret or a token to talk to your bot.
-        // Tokens are more secure. To learn about the differences between secrets and tokens
-        // and to understand the risks associated with using secrets, visit https://docs.microsoft.com/en-us/azure/bot-service/rest-api/bot-framework-rest-direct-line-3-0-authentication?view=azure-bot-service-4.0
 
         const { connectToWebChat, ReactWebChat } = window.WebChat;
 
@@ -49,22 +74,23 @@
 
         const SIDESCROLL_CSS = css({
           position: "relative",
-          "& > .activity > div": {
-            overflowX: scroll
-          }
+          overflowX: "auto",
+          width: "100%"
         });
 
-        class ActivityWithSidescroll extends React.Component {
-          render() {
-            const { props } = this;
+        const AttachmentMiddlewareWithSideScroll = ({ card }) => (
+          <div
+            className={SIDESCROLL_CSS}
+            dangerouslySetInnerHTML={{ __html: card.activity.text }}
+          />
+        );
 
-            return <div className={SIDESCROLL_CSS}>{props.children}</div>;
+        const attachmentMiddleware = () => next => card => {
+          if (card.attachment && /^</.test(card.attachment.content)) {
+            return <AttachmentMiddlewareWithSideScroll card={card} />;
           }
-        }
-
-        const ConnectActivityWithSidescroll = connectToWebChat(
-          ({ postActivity }) => ({ postActivity })
-        )(props => <ActivityWithSidescroll {...props} />);
+          return next(card);
+        };
 
         const res = await fetch(
           "https://webchat-mockbot.azurewebsites.net/directline/token",
@@ -72,22 +98,14 @@
         );
         const { token } = await res.json();
 
-        const activityMiddleware = () => next => card => {
-          if (card.activity) {
-            return children => (
-              <ConnectActivityWithSidescroll activityID={card.activity.id}>
-                {next(card)(children)}
-              </ConnectActivityWithSidescroll>
-            );
-          } else {
-            return next(card);
-          }
-        };
-
         window.ReactDOM.render(
           <ReactWebChat
-            activityMiddleware={activityMiddleware}
+            attachmentMiddleware={attachmentMiddleware}
             directLine={window.WebChat.createDirectLine({ token })}
+            styleOptions={{
+              botAvatarInitials: "WC",
+              userAvatarInitials: "CG"
+            }}
           />,
           document.getElementById("webchat")
         );
