--- a/index.html
+++ b/index.html
@@ -4,32 +4,54 @@
     <title>Web Chat - Speech AudioConfig</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./webchat.js"></script>
-    <script src="https://unpkg.com/@babel/standalone@7.6.2/babel.min.js"></script>
-    <script src="https://unpkg.com/react@16.8.6/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16.8.6/umd/react-dom.development.js"></script>
+    <script
+      src="https://unpkg.com/@babel/standalone@7.6.2/babel.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://unpkg.com/react@16.8.6/umd/react.development.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@16.8.6/umd/react-dom.development.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+    <script
+      src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- This sample is purposefully using a manually altered version of the Speech SDK, due to the following bug: -->
     <!-- https://github.com/microsoft/cognitive-services-speech-sdk-js/issues/96 -->
+    <!-- See line 3036 on the bundle below for change-->
     <script src="./microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
-
     <style>
       html,
       body {
         height: 100%;
       }
       body {
+        font-family: sans-serif;
         margin: 0;
       }
-      #webchat {
+      .dropdown-container {
+        background-color: #eeeeee;
+        text-align: center;
+      }
+      #main {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+      .wc-container {
         height: 100%;
         width: 100%;
       }
     </style>
   </head>
   <body>
-    <main id="webchat"></main>
+    <main id="main"></main>
     <script type="text/babel">
       function createFetchSpeechServicesCredentials() {
         let expireAfter = 0;
@@ -65,25 +87,85 @@
         );
         const { token } = await res.json();
         const { ReactWebChat } = window.WebChat;
+        const {
+          Fragment,
+          useCallback,
+          useEffect,
+          useMemo,
+          useState
+        } = window.React;
 
-        const webSpeechPonyfillFactory = await window.WebChat.createCognitiveServicesSpeechServicesPonyfillFactory(
-          {
-            // audioConfig,
-            authorizationToken: fetchSpeechServicesToken,
-            region: await fetchSpeechServicesRegion()
-          }
-        );
+        const AudioInputDropdown = ({ onChange, value }) => {
+          const [devices, setDevices] = useState([]);
 
-        window.ReactDOM.render(
-          <ReactWebChat
-            directLine={window.WebChat.createDirectLine({ token })}
-            webSpeechPonyfillFactory={webSpeechPonyfillFactory}
-            // etc
-          />,
-          document.getElementById("webchat")
-        );
-        document.querySelector("#webchat > *").focus();
-      })().catch(err => console.log(err));
+          useMemo(async () => {
+            const devices = await navigator.mediaDevices.enumerateDevices();
+
+            setDevices(devices.filter(({ kind }) => kind === "audioinput"));
+          }, []);
+
+          const handleChange = useCallback(
+            event => {
+              onChange(event.target.value);
+            },
+            [onChange]
+          );
+
+          return (
+            <select onChange={handleChange} value={value}>
+              {devices.map(({ deviceId, label }) => (
+                <option key={deviceId} value={deviceId}>
+                  {label}
+                </option>
+              ))}
+            </select>
+          );
+        };
+
+        const App = props => {
+          const [deviceId, setDeviceId] = useState();
+          const lastUpdated = useMemo(() => new Date(), [deviceId]);
+          const [
+            webSpeechPonyfillFactory,
+            setWebSpeechPonyfillFactory
+          ] = useState();
+
+          useMemo(async () => {
+            const ponyfillFactory = await window.WebChat.createCognitiveServicesSpeechServicesPonyfillFactory(
+              {
+                audioConfig: window.SpeechSDK.AudioConfig.fromMicrophoneInput(
+                  deviceId
+                ),
+                authorizationToken: fetchSpeechServicesToken,
+                region: await fetchSpeechServicesRegion()
+              }
+            );
+
+            setWebSpeechPonyfillFactory(() => ponyfillFactory);
+          }, [deviceId]);
+
+          const directLine = useMemo(() => {
+            return window.WebChat.createDirectLine({ token });
+          }, [token]);
+
+          return (
+            <Fragment>
+              <div className="dropdown-container">
+                <p>{`Microphone last updated at ${lastUpdated}`}</p>
+                <AudioInputDropdown onChange={setDeviceId} value={deviceId} />
+              </div>
+              <div className="wc-container">
+                <ReactWebChat
+                  directLine={directLine}
+                  webSpeechPonyfillFactory={webSpeechPonyfillFactory}
+                />
+              </div>
+            </Fragment>
+          );
+        };
+
+        window.ReactDOM.render(<App />, document.getElementById("main"));
+      })().catch(err => console.warn(err));
     </script>
   </body>
 </html>
