--- a/sidescroll/index.html
+++ b/sidescroll/index.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/glamor@2.20.40/umd/index.js"></script>
 
     <!-- This webchat.js file is built from Web Chat's 'latest' bits as of 10/16/2019-->
-    <script src="/../webchat.js"></script>
+    <script src="./webchat.js"></script>
     <style>
       html,
       body {
