--- a/audioconfig/index.html
+++ b/audioconfig/index.html
@@ -25,7 +25,7 @@
     <!-- This sample is purposefully using a manually altered version of the Speech SDK, due to the following bug: -->
     <!-- https://github.com/microsoft/cognitive-services-speech-sdk-js/issues/96 -->
     <!-- See line 3036 in the bundle below for change-->
-    <script src="./microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
+    <script src="../microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
     <style>
       html,
       body {
@@ -108,7 +108,7 @@
 
             setDevices(devices.filter(({ kind }) => kind === "audioinput"));
           }, []);
-
+          console.log(devices);
           const handleChange = useCallback(
             event => {
               onChange(event.target.value);
@@ -120,7 +120,7 @@
             <select onChange={handleChange} value={value}>
               {devices.map(({ deviceId, label }) => (
                 <option key={deviceId} value={deviceId}>
-                  {label}
+                  {deviceId}
                 </option>
               ))}
             </select>
